--- a/SelectionCommittee_/src/main/resources/templates/adminAllUsers.html
+++ b/SelectionCommittee_/src/main/resources/templates/adminAllUsers.html
@@ -1,41 +1,66 @@
-<!--<!DOCTYPE html>-->
-<!--<html xmlns="http://www.w3.org/1999/xhtml"-->
-<!--      xmlns:th="http://www.thymeleaf.org" xmlns:c="http://java.sun.com/jsp/jstl/core">-->
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 
-<!--<head>-->
-<!--    <title th:utext="#{lang.title}"></title>-->
-<!--    <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}"/>-->
-<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
-<!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>-->
-<!--    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
-<!--</head>-->
+<head>
+    <title th:utext="#{lang.title}"></title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
 
-<!--<body>-->
-<!--<div class="container">-->
+<body>
+<div class="container">
 
-<!--    <form th:action="@{/logout}" method="get">-->
-<!--        <button class="btn btn-md btn-danger btn-block" name="registration"-->
-<!--                type="Submit" th:utext="#{lang.logout}">-->
-<!--        </button>-->
-<!--    </form>-->
+    <form th:action="@{/logout}" method="get">
+        <button class="btn btn-md btn-danger btn-block" name="logout"
+                type="Submit" th:utext="#{lang.logout}">
+        </button>
+    </form>
+    <form th:action="@{/admin/home}" method="get">
+        <button class="btn btn-md btn-danger btn-block" name="back"
+                type="Submit" th:utext="#{lang.back}">
+        </button>
+    </form>
 
-<!--    <table>-->
-<!--        <thead>-->
-<!--        <th>ID</th>-->
-<!--        <th>UserName</th>-->
-<!--        <th>Password</th>-->
-<!--        <th>Roles</th>-->
-<!--        </thead>-->
+    <h1 th:utext="#{lang.applicants.list}"></h1>
+    <div>
+        <table class="table table-striped table-bordered">
+            <thead class="thead-dark">
+            <tr>
+                <th>ID</th>
+                <th th:utext="#{lang.user.name.caps}" ></th>
+                <th th:utext="#{lang.email.caps}"></th>
+                <th th:utext="#{lang.block.user}"></th>
+                <th th:utext="#{lang.delete.user}"></th>
+            </tr>
 
-<!--        <tr-->
-<!--                th:each="user : ${users}">-->
-<!--            <td th:text="${user.id}" />-->
-<!--            <td th:text="${user.userName}" />-->
-<!--            <td th:text="${user.email}" />-->
-<!--        </tr>-->
+            </thead>
+            <tbody>
+            <tr th:if="${#lists.isEmpty(applicants)}">
+                <td colspan="5" th:utext="#{lang.users.not.found}"></td>
+            </tr>
+            <tr th:each="applicant : ${applicants}">
+                <td th:text="${applicant.id}">ID</td>
+                <td th:text="${applicant.userName}">USER NAME</td>
+                <td th:text="${applicant.email}">E-MAIL</td>
+                <td><a th:href="@{/block/{id}(id=${applicant.id})}"
+                       class="btn btn-block"
+                       th:utext="#{lang.block.button}"
+                       th:if="${applicant.getActive() == true}"></a>
+                    <a th:href="@{/unblock/{id}(id=${applicant.id})}"
+                       class="btn btn-block"
+                       th:utext="#{lang.unblock.button}"
+                       th:if="${applicant.getActive() == false}"></a>
+                </td>
 
-<!--    </table>-->
+                <td><a th:href="@{/delete/{id}(id=${applicant.id})}" class="btn btn-danger" th:utext="#{lang.delete.button}"></a></td>
+            </tr>
+            </tbody>
 
-<!--</div>-->
-<!--</body>-->
-<!--</html>-->
+        </table>
+    </div>
+</div>
+</body>
+</html>
