--- a/SelectionCommittee_/src/main/resources/templates/adminHome.html
+++ b/SelectionCommittee_/src/main/resources/templates/adminHome.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org" xmlns:c="http://java.sun.com/jsp/jstl/core">
+      xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <title th:utext="#{lang.title}"></title>
