--- a/SelectionCommittee_/src/main/resources/templates/adminHome.html
+++ b/SelectionCommittee_/src/main/resources/templates/adminHome.html
@@ -25,11 +25,11 @@
         </button>
     </form>
 
-<!--    <form th:action="@{/logout}" method="get">-->
-<!--        <button class="btn btn-md btn-danger btn-block" name="registration"-->
-<!--                type="Submit" th:utext="#{lang.logout}">-->
-<!--        </button>-->
-<!--    </form>-->
+    <form th:action="@{/allFaculties}" method="get">
+        <button class="btn btn-md btn-danger btn-block" name="allFaculties"
+                type="Submit" th:utext="#{lang.all.faculties}">
+        </button>
+    </form>
 
 
 
