registerOnFaculty done applications done

--- a/SelectionCommittee/src/main/resources/templates/applicantHome.html
+++ b/SelectionCommittee/src/main/resources/templates/applicantHome.html
@@ -25,8 +25,8 @@
         </button>
     </form>
 
-    <form th:action="@{/myApplications}" method="get">
-        <button class="btn btn-md btn-danger btn-block" name="myApplications"
+    <form th:action="@{/applications}" method="get">
+        <button class="btn btn-md btn-danger btn-block" name="applications"
                 type="Submit" th:utext="#{lang.show.applications}">
         </button>
     </form>
