--- a/SelectionCommittee/src/main/resources/templates/applications.html
+++ b/SelectionCommittee/src/main/resources/templates/applications.html
@@ -24,35 +24,27 @@
     </button>
   </form>
 
-  <h1 th:utext="#{lang.faculties.list}"></h1>
+  <h1 th:utext="#{lang.show.applications}"></h1>
   <div>
     <table class="table table-striped table-bordered">
       <thead class="thead-dark">
       <tr>
+        <th th:utext="#{lang.faculty.number.of.application}"></th>
         <th th:utext="#{lang.faculty.name.caps}" ></th>
         <th th:utext="#{lang.faculty.licensed.caps}"></th>
         <th th:utext="#{lang.faculty.budget.caps}"></th>
-        <th th:utext="#{lang.faculty.register.caps}"></th>
       </tr>
 
       </thead>
       <tbody>
-      <tr th:if="${#lists.isEmpty(faculties)}">
+      <tr th:if="${#lists.isEmpty(requests)}">
         <td colspan="5" th:utext="#{lang.not.found}"></td>
       </tr>
-      <tr th:each="faculty : ${faculties}">
-        <td th:text="${faculty.facultyName}"></td>
-        <td th:text="${faculty.licensedVolume}"></td>
-        <td th:text="${faculty.budgetPlaces}"></td>
-        <td><a th:if="${!faculty.getUsers().contains(user)}"
-                th:href="@{/reg/{id}(id=${faculty.id})}"
-               class="btn btn-block"
-               th:utext="#{lang.faculty.register}"></a>
-          <a th:if="${faculty.getUsers().contains(user)}"
-             th:href="@{/reg/{id}(id=${faculty.id})}"
-             class="btn btn-block disabled"
-             th:utext="#{lang.faculty.registered}"></a>
-        </td>
+      <tr th:each="request : ${requests}">
+        <td th:text="${requestStat.count}"></td>
+        <td th:text="${requests.get(requestStat.index).facultyName}"></td>
+        <td th:text="${requests.get(requestStat.index).licensedVolume}"></td>
+        <td th:text="${requests.get(requestStat.index).budgetPlaces}"></td>
       </tr>
       </tbody>
     </table>
